8210406: Refactor java.util.PluggableLocale:i18n shell tests to plain java tests
Reviewed-by: naoto